Fix scrolling on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
 }
 
 h2 {
